# kylin-printer

./: .gitignore  CMakeLists.txt  README.md  TODO  kylin-printer.desktop  main.cpp
debian/: changelog  control  copyright  files  rules
debian/source/: local-options
doc/: Printer-MIB.csv  网络打印协议测试.xlsx
doc/html/: QTZeroConf.html  avahi-qt.html  snmpwalk_usage.html  test_avahi_in_c.html  udp_broadcasting_demo.html  网络打印机总结简述.html  网络打印机总结详细描述.html
doc/markdown/: avahi-qt.md  snmpwalk_usage.md  test_avahi_in_c.md  udp_broadcasting_demo.md  网络打印机总结简述.md  网络打印机总结详细描述.md
printer_manager/: cupsconnection4ppds.cpp  cupsconnection4ppds.h  deviceInformation.cpp  deviceInformation.h  deviceMonitor.cpp  deviceMonitor.h  findppdsthread.cpp  findppdsthread.h  matchppdsthread.cpp  matchppdsthread.h  networkDeviceMonitor.cpp  networkDeviceMonitor.h  ukuiApt.cpp  ukuiApt.h  ukuiPrinter.cpp  ukuiPrinter.h
ui/: kylin-printer.pro  mainwindow.cpp  mainwindow.h  manualinstallwindow.cpp  manualinstallwindow.h  mylabel.cpp  picture.qrc  popwindow.cpp  popwindow.h  propertywindow.cpp  propertywindow.h  succedfailwindow.cpp  succedfailwindow.h
